--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -19,6 +19,11 @@
         <whitelist>
             <directory suffix=".php">src</directory>
         </whitelist>
+        <blacklist>
+            <directory>build</directory>
+            <directory>tests</directory>
+            <directory>vendor</directory>
+        </blacklist>
     </filter>
     <logging>
         <log type="coverage-clover" target="build/logs/clover.xml"/>
