--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,9 @@
     },
     "minimum-stability": "stable",
     "autoload": {
-        "psr-0": {
-            "Keboola\\GoodData": "src/"
-        }
+        "psr-4": { "Keboola\\GoodData\\": "src/Keboola/GoodData" }
+    },
+    "autoload-dev": {
+        "psr-4": { "Keboola\\GoodData\\Test\\": "tests/Keboola/GoodData" }
     }
 }
