--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "php": "~5.6",
         "psr/log": "~1.0.0",
         "guzzlehttp/guzzle": "~6.0",
-        "symfony/process": "~2.3"
+        "symfony/process": "~2.3",
+        "travisghansen/phpgpg": "~v0.0.7"
     },
     "require-dev": {
         "phpunit/phpunit": "^5",
