--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,23 @@
 language: php
+
 php:
 - 5.6
+
+sudo: true
+
+before_install:
+  - sudo apt-get update -qq
+  - sudo apt-get install -y gnupg2
+
 before_script:
+  - pecl install gnupg
   - composer self-update
   - composer install -n --no-scripts
+
 script:
   - ./vendor/bin/phpcs --standard=psr2 -n --ignore=vendor .
   - ./vendor/bin/phpunit --coverage-clover=build/logs/clover.xml
+
 after_script:
   - ./vendor/bin/test-reporter --stdout > codeclimate.json
   - "curl -X POST -d @codeclimate.json -H 'Content-Type: application/json' -H 'User-Agent: Code Climate (PHP Test Reporter v0.1.1)' https://codeclimate.com/test_reports"
