--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "php": "~5.6",
         "psr/log": "~1.0.0",
         "guzzlehttp/guzzle": "~6.0",
-        "travisghansen/phpgpg": "~v0.0.7"
+        "pear/crypt_gpg": "~v1.4.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^5",
