--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,8 @@
         "php": ">=5.6",
         "psr/log": "~1.0.0",
         "guzzlehttp/guzzle": "~6.0",
-        "guzzle/guzzle": "^3.9",
-        "pear/crypt_gpg": "~v1.4.2"
+        "pear/crypt_gpg": "~v1.4.2",
+        "symfony/process": "~v3.2.7"
     },
     "require-dev": {
         "phpunit/phpunit": "^5",
