--- a/composer.json
+++ b/composer.json
@@ -14,16 +14,16 @@
         "php": ">=5.6",
         "psr/log": "~1.0.0",
         "guzzlehttp/guzzle": "~6.0",
-        "pear/crypt_gpg": "~v1.4.2",
-        "symfony/process": "~v2.7.9"
+        "pear/crypt_gpg": "^1.6.0",
+        "symfony/process": "^3.3.6"
     },
     "require-dev": {
         "phpunit/phpunit": "^5",
-        "phpunit/php-code-coverage": "^3",
-        "squizlabs/php_codesniffer": "~2.5",
+        "phpunit/php-code-coverage": "^4",
+        "squizlabs/php_codesniffer": "^3.0",
         "codeclimate/php-test-reporter": "dev-master",
         "monolog/monolog": "~1.11",
-        "keboola/php-temp": "0.1.3"
+        "keboola/php-temp": "^0.1.6"
     },
     "minimum-stability": "stable",
     "autoload": {
