--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "psr/log": "~1.0.0",
         "guzzlehttp/guzzle": "~6.0",
         "pear/crypt_gpg": "^1.6.0",
-        "symfony/process": "^3.3.6"
+        "symfony/process": "^2.7" // Due to syrup requirement
     },
     "require-dev": {
         "phpunit/phpunit": "^5",
