--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_script:
 
 script:
   - ./vendor/bin/phpcs --standard=psr2 -n --ignore=vendor .
-  - travis_wait ./vendor/bin/phpunit --coverage-clover=build/logs/clover.xml
+  - travis_wait 30 ./vendor/bin/phpunit --coverage-clover=build/logs/clover.xml
 
 after_script:
   - ./vendor/bin/test-reporter --stdout > codeclimate.json
