--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,4 @@ before_script:
 
 script:
   - ./vendor/bin/phpcs --standard=psr2 -n --ignore=vendor .
-  - travis_wait 30 ./vendor/bin/phpunit --coverage-clover=build/logs/clover.xml
-
-after_script:
-  - ./vendor/bin/test-reporter --stdout > codeclimate.json
-  - "curl -X POST -d @codeclimate.json -H 'Content-Type: application/json' -H 'User-Agent: Code Climate (PHP Test Reporter v0.1.1)' https://codeclimate.com/test_reports"
+  - travis_wait 30 ./vendor/bin/phpunit
