--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "psr/log": "~1.0.0",
         "guzzlehttp/guzzle": "~6.0",
         "pear/crypt_gpg": "^1.6.0",
-        "symfony/process": "^2.7"
+        "symfony/process": "^4.0||^3.0||^2.7"
     },
     "require-dev": {
         "phpunit/phpunit": "^5",
