--- a/composer.json
+++ b/composer.json
@@ -11,26 +11,26 @@
         }
     ],
     "require": {
-        "php": ">=5.6",
+        "php": ">=7.1",
         "ext-json": "*",
         "psr/log": "~1.0.0",
         "guzzlehttp/guzzle": "~6.0",
-        "pear/crypt_gpg": "^1.6.0",
-        "symfony/process": "^4.0||^3.0||^2.7"
+        "pear/crypt_gpg": "^1.6",
+        "symfony/process": "^4.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5",
-        "phpunit/php-code-coverage": "^4",
+        "phpunit/phpunit": "^6.0",
+        "phpunit/php-code-coverage": "^5.3",
         "squizlabs/php_codesniffer": "^3.0",
         "codeclimate/php-test-reporter": "dev-master",
         "monolog/monolog": "~1.11",
-        "keboola/php-temp": "^0.1.6"
+        "keboola/php-temp": "^1.0"
     },
     "minimum-stability": "stable",
     "autoload": {
-        "psr-4": { "Keboola\\GoodData\\": "src/Keboola/GoodData" }
+        "psr-4": { "Keboola\\GoodData\\": "src/" }
     },
     "autoload-dev": {
-        "psr-4": { "Keboola\\GoodData\\Test\\": "tests/Keboola/GoodData" }
+        "psr-4": { "Keboola\\GoodData\\Test\\": "tests/" }
     }
 }
