--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     ],
     "require": {
         "php": ">=5.6",
+        "ext-json": "*",
         "psr/log": "~1.0.0",
         "guzzlehttp/guzzle": "~6.0",
         "pear/crypt_gpg": "^1.6.0",
